--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
             <img src="img/mancini copia.png" alt="Hero Image">
         </div>
     </div>
+    
+    <div class="divisore-social">
+        <section class="social-bar">
 
-    <section class="social-bar">
+            <h1>Calcio - 12'</h1>
 
-        <h1>Calcio - 12'</h1>
-
-        <a href="http://" target="_blank"><div class="facebook"><img src="img/Icon awesome-facebook-f.svg" alt="Facebook"></div></a>
-        <a href="http://" target="_blank"><div class="twitter"><img src="img/Icon awesome-twitter.svg" alt="Twitter"></div></a>
-        <a href="http://" target="_blank"><div class="mail"><img src="img/Icon ionic-ios-mail.svg" alt="E-Mail"></div></a>
-    </section>
+            <div class="social-links">
+            <a href="http://" target="_blank"><div class="facebook"><img src="img/Icon awesome-facebook-f.svg" alt="Facebook"></div></a>
+            <a href="http://" target="_blank"><div class="twitter"><img src="img/Icon awesome-twitter.svg" alt="Twitter"></div></a>
+            <a href="http://" target="_blank"><div class="mail"><img src="img/Icon ionic-ios-mail.svg" alt="E-Mail"></div></a>
+        </div>
+        </section>
+    </div>
 
     <nav>
         <ul>
@@ -66,11 +70,13 @@
             <div class="connect"></div>
     
             <div class="pullquote">
-                <h1>«la fortuna che ci ha accompagnato si è trasformata in totale sfortuna»</h1>
+                <h1> <b>«</b>la fortuna che ci ha accompagnato si è trasformata in totale sfortuna<b>»</b></h1>
+                <h2>Roberto Mancini</h2>
             </div>
     </div>
     <div class="divisore-ita">
         <img src="img/Nazionale-Italia-Cover-1024x493.png" alt="Stemma Italia">
+        <div class="shadow"></div>
     </div>
     <div class="paragraph" id="p2">
 
