--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
     <div class="paragraph" id="p6">
         
-        <h1 id="occasioni"><b>«</b>Le occasioni da gol<b>»</b></h1>
+        <h1 id="occasioni"><b>«</b>Le occasioni <br> da gol<b>»</b></h1>
         <div class="par1">
         <p>Le occasioni da gol sono lì a ricordarci ciò che poteva essere e non è stato, sono immagini di orizzonti possibili e che si sono negati. È il 63’ quando Domenico Berardi taglia da destra verso sinistra dietro la difesa della Macedonia del Nord. Con il braccio destro alto ha richiamato l’attenzione di Marco Verratti, che lo asseconda con un lancio a scavalcare i due difensori centrali. Berardi stoppa il pallone di petto in corsa, lo lascia cadere a terra e di controbalzo calcia di sinistro. Il pallone esce in calcio d’angolo e non entra in porta solo per l’intervento del terzino sinistro Alioski, che chiude una diagonale pazzesca scivolando dietro Berardi e toccando il pallone con la gamba sinistra. Stole Dimitrievski, il portiere macedone, abbraccia il compagno di squadra mentre Berardi si rialza e borbotta qualche parola. Il suo viso è basito. <br><br><br><br>
 
