--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="#intro"><li>Intro</li></a>
             <a href="#commenti"><li>Commenti</li></a>
             <a href="#lacrime"><li>Lacrime</li></a>
-            <a href="#gol">Gol</a>
+            <a href="#gol"> <li>Gol</li></a>
             <a href="#occasioni"><li>Occasioni</li></a>
             <a href="#epilogo"><li>Epilogo</li></a>
         </ul>
