--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <nav>
         <ul>
             <a href="#intro"><li>Intro</li></a>
-            <a href="#commenti"><li>Commenti</li></a>
+            <a href="#primo_par"><li>Commenti</li></a>
             <a href="#lacrime"><li>Lacrime</li></a>
             <a href="#gol"> <li>Gol</li></a>
             <a href="#occasioni"><li>Occasioni</li></a>
@@ -78,7 +78,9 @@
         <img src="img/Nazionale-Italia-Cover-1024x493.png" alt="Stemma Italia">
         <div class="shadow"></div>
     </div>
-    <div class="paragraph" id="p2">
+   <section id="primo_par">
+       <div class="paragraph" id="p2">
+        
         
         <h1 id="commenti"><b>«</b>I commenti<b>»</b></h1>
 
@@ -95,6 +97,7 @@
                 <iframe width="950" height="534" src="https://www.youtube.com/embed/xhHcrodadn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
     </div>
+    </section>
     <div class="paragraph" id="p3">
 
         <p>Negli attimi successivi al fallimento l’analisi della sconfitta non basta, c’è subito la tentazione di guardare oltre. Fabio Cannavaro – anche lui appena ritiratosi dalla Nazionale – nella conferenza stampa successiva alla partita con la Slovacchia di Sudafrica 2010 parla del futuro del movimento calcistico italiano facendo una generale autocritica: «Se ci fermiamo dove siamo adesso ci mettiamo altri ventisei anni per rivincere un Mondiale». <br><br><br><br>
